refactor: Map<> 파싱에서 DTO 파싱으로 변경